# scripts

GROMACS/: analyze.sh  download_build_install_GROMACS.sh  run_gromacs.sh
MPS/: run-with-mps.sh  start_multigpu_mps.sh  stop_multigpu_mps.sh
NVML/cmake/: FindNVML.cmake
NVML/example/src/: CMakeLists.txt  matrixMul.cu  nvml_test.cu
UnifiedMemory/: Makefile  managed_allocator.cuh  managed_allocator_test.cu  managed_operator_new.c
